7. Scanner [#504791 #214072]. Исправления ошибок в коде, выявленных CI ботом