@@ -4,13 +4,14 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 import ru.job4j.nio.duplicates.DuplicatesFinder.DuplicatesVisitor;
-import static org.junit.Assert.assertThat;
-import static org.hamcrest.Matchers.is;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThat;
 
 public class DuplicatesFinderTest {
 
@@ -22,20 +23,26 @@ public class DuplicatesFinderTest {
         Path tempDirPath = folder.newFolder("folder").toPath();
         Path filePath1 = tempDirPath.resolve("file1.txt");
         Path filePath2 = tempDirPath.resolve("file2.txt");
+        Files.createFile(filePath1);
+        Files.createFile(filePath2);
         Path nestedDirPath1 = tempDirPath.resolve("nfolder1");
-        Files.createDirectory(nestedDirPath1);
         Path filePath3 = nestedDirPath1.resolve("file3.txt");
         Path filePath4 = nestedDirPath1.resolve("file2.txt");
+        Files.createDirectory(nestedDirPath1);
+        Files.createFile(filePath3);
+        Files.createFile(filePath4);
         Path nestedDirPath2 = nestedDirPath1.resolve("nfolder2");
-        Files.createDirectory(nestedDirPath2);
         Path filePath5 = nestedDirPath2.resolve("file4.txt");
         Path filePath6 = nestedDirPath2.resolve("file1.txt");
+        Files.createDirectory(nestedDirPath2);
+        Files.createFile(filePath5);
+        Files.createFile(filePath6);
         List<Path> filesPath = List.of(
                 filePath1, filePath2, filePath3, filePath4, filePath5, filePath6
         );
         for (Path fp
                 : filesPath) {
-            Files.write(fp, "Hello".getBytes());
+            Files.writeString(fp, "Hello");
         }
         DuplicatesVisitor duplicatesVisitor = new DuplicatesVisitor();
         Files.walkFileTree(tempDirPath, duplicatesVisitor);
